# getwork

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
getwork/: asgi.py  settings.py  urls.py  wsgi.py
jobs/: admin.py  models.py  views.py
jobs/templates/jobs/: accept_job.html  base.html  job_form.html  jobs.html  tandc.html
offers/: admin.py  models.py  views.py
offers/templates/offers/: offer_list.html
users/: forms.py  models.py  views.py
users/templates/users/: login.html  logout.html  register.html  user_detail.html
