[tool.poetry]
name = "getwork"
version = "0.1.0"
description = ""
authors = ["shalin-devkota <shalin.devkota01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.5"
django-crispy-forms = "^1.14.0"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
